--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,4 +29,28 @@
         android:layout_height="wrap_content"
         android:text="LED OFF" />
 
+    <TextView
+        android:id="@+id/firstValueName"
+        android:layout_width="match_parent"
+        android:layout_height="34dp"
+        android:text="TextView" />
+
+    <TextView
+        android:id="@+id/firstValue"
+        android:layout_width="match_parent"
+        android:layout_height="34dp"
+        android:text="TextView" />
+
+    <TextView
+        android:id="@+id/secondValueName"
+        android:layout_width="match_parent"
+        android:layout_height="34dp"
+        android:text="TextView" />
+
+    <TextView
+        android:id="@+id/secondValue"
+        android:layout_width="match_parent"
+        android:layout_height="34dp"
+        android:text="TextView" />
+
 </LinearLayout>
